FIX: Enable word wrap for `pre` tags in embedded discourse on iOS

--- a/app/assets/stylesheets/embed.css.scss
+++ b/app/assets/stylesheets/embed.css.scss
@@ -80,6 +80,9 @@ article.post {
     word-wrap: break-word;
     word-break: break-word;
 
+    pre {
+      white-space: pre-wrap;
+    }
     img {
       max-width:100%;
     }
